plugins {
    alias(libs.plugins.androidApplication)
}

android {
    namespace 'cn.yzfy.crushApp'
    compileSdk 34

    defaultConfig {
        applicationId "cn.yzfy.crushApp"
        minSdk 26
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.constraintlayout
    implementation libs.recyclerview
    implementation libs.swiperefreshlayout
    implementation libs.okhttp
    implementation libs.gson
    implementation libs.markwon
    testImplementation libs.junit
    androidTestImplementation libs.androidx.test.ext.junit
    androidTestImplementation libs.espresso.core
}